post request to create object; functional test post /tasks
